--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           submodules: false
           sparse-checkout: |
+            _layouts/
             README.md
             entities/
             image/
