--- a/dashboards/skynet_mobile.yaml
+++ b/dashboards/skynet_mobile.yaml
@@ -14,6 +14,6 @@ views:
   - !include "view_air_conditioning.yaml"
   - !include "view_sun_energy.yaml"
   - !include "view_presence.yaml"
-  - !include "view_batteries.yaml"
+  - !include "view_diagnostics.yaml"
   - !include "view_qr_wifi.yaml"
   - !include "view_strava.yaml"
