--- a/configuration.yaml
+++ b/configuration.yaml
@@ -153,7 +153,7 @@ shell_command:
   nspanel_screen: 'ssh -F /config/.ssh/config nspanel "ANDROID_DATA=/data input keyevent 26"'
   nspanel_ps: 'ssh -F /config/.ssh/config nspanel "ps -A | grep homeassistant"'
   pc_win32: 'ssh -F /config/.ssh/config pc "wmic os get caption"'
-  pc_hibernate: 'ssh -f -F /config/.ssh/config pc "shutdown /h"'
+  pc_hibernate: 'ssh -F /config/.ssh/config pc "schtasks /run /tn HibernatePC"'
 
 timer:
   pc_countdown:
