--- a/automations/automations_startup.yaml
+++ b/automations/automations_startup.yaml
@@ -21,6 +21,6 @@
       data:
         mode: dark # TODO white theme support
         name: skynet
-    - service: notify.mobile_app_iphone_kamil
+    - action: script.home_alert
       data:
         message: Home Assistant server has started # TODO deduct if the current start is clean
