--- a/dashboards/skynet.yaml
+++ b/dashboards/skynet.yaml
@@ -1,15 +1,8 @@
 title: Skynet
 views:
   - !include "view_home_desktop.yaml"
-  # - !include "view_home_mobile.yaml"
-  - !include "view_lights_desktop.yaml" # todo view_lights.yaml
+  - !include "view_lights.yaml"
   - !include "view_lights_scenes.yaml"
-  # - !include "view_lights_living_room.yaml" # todo remove, replaced by dashboard-areas, auto-created views
-  # - !include "view_lights_bathroom.yaml"
-  # - !include "view_lights_bedroom.yaml"
-  # - !include "view_lights_hall_kitchen.yaml"
-  # - !include "view_lights_wardrobe.yaml"
-  # - !include "view_lights_balcony.yaml"
   - !include "view_media.yaml"
   - !include "view_robot_vacuum.yaml"
   - !include "view_air_conditioning.yaml"
