--- a/dashboards/skynet_mobile.yaml
+++ b/dashboards/skynet_mobile.yaml
@@ -1,15 +1,7 @@
 title: Skynet Mobile
 views:
   - !include "view_home_mobile.yaml"
-  - !include "view_lights_desktop.yaml" # todo view_lights.yaml
-  # - !include "view_lights_mobile.yaml"
-  # - !include "view_lights_scenes.yaml"
-  # - !include "view_lights_living_room.yaml"
-  # - !include "view_lights_bathroom.yaml"
-  # - !include "view_lights_bedroom.yaml"
-  # - !include "view_lights_hall_kitchen.yaml"
-  # - !include "view_lights_wardrobe.yaml"
-  # - !include "view_lights_balcony.yaml"
+  - !include "view_lights.yaml"
   - !include "view_media.yaml"
   - !include "view_robot_vacuum.yaml"
   - !include "view_air_conditioning.yaml"
