--- a/configuration.yaml
+++ b/configuration.yaml
@@ -57,8 +57,6 @@ influxdb:
   default_measurement: state
   exclude: !include configuration/exclude.yaml
 
-fan: !include templates/fan.yaml # TODO update
-
 input_select:
   pioneer_source:
     name: "Pioneer Source"
@@ -85,8 +83,6 @@ input_select:
 #      - "Power off"
 
 media_player: !include configuration/media_player.yaml
-
-light: !include templates/light.yaml # TODO update
 
 counter:
   switches_enabled:
@@ -159,6 +155,5 @@ timer:
   pc_countdown:
     name: PC countdown until power OFF
 
-template: !include templates/sensor.yaml # TODO update
-# template: !include_dir_merge_list templates/
+template: !include_dir_merge_list templates/
 
